--- a/doc/trunk/design/syn/S02.pod
+++ b/doc/trunk/design/syn/S02.pod
@@ -12,9 +12,9 @@ Larry Wall <larry@wall.org>
 
   Maintainer: Larry Wall <larry@wall.org>
   Date: 10 Aug 2004
-  Last Modified: 2 Aug 2006
+  Last Modified: 7 Aug 2006
   Number: 2
-  Version: 57
+  Version: 58
 
 This document summarizes Apocalypse 2, which covers small-scale
 lexical items and typological issues.  (These Synopses also contain
@@ -185,7 +185,10 @@ a dotted postfix on the next line.  But it also lets you continue
 the line in any situation where a newline might confuse the parser,
 regardless of the currently installed parser.  (Unless, of course,
 you override the unspace rule itself...)  Although we say that the
-unspace hides the whitespace from the parser, line numbers are still counted.
+unspace hides the whitespace from the parser, line numbers are still counted
+if the unspace contains one or more newlines.  All other line-oriented
+processing is suppressed, however--including pod directives and heredoc
+boundaries.
 
 =item *
 
