Gah, would help if I actually thought about these things before committing...
git-svn-id: http://svn.pugscode.org/pugs@23515 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/doc/trunk/design/syn/S02.pod
+++ b/doc/trunk/design/syn/S02.pod
@@ -14,7 +14,7 @@ Larry Wall <larry@wall.org>
   Date: 10 Aug 2004
   Last Modified: 7 Aug 2006
   Number: 2
-  Version: 59
+  Version: 60
 
 This document summarizes Apocalypse 2, which covers small-scale
 lexical items and typological issues.  (These Synopses also contain
@@ -185,11 +185,28 @@ a dotted postfix on the next line.  But it also lets you continue
 the line in any situation where a newline might confuse the parser,
 regardless of the currently installed parser.  (Unless, of course,
 you override the unspace rule itself...)  Although we say that the
-unspace hides the whitespace from the parser, line numbers are still counted
-if the unspace contains one or more newlines.  Also, a C<#> in the first column
-is always an end-of-line comment, as described above.  All other line-oriented
-processing is suppressed, however--including pod directives and heredoc
-boundaries.
+unspace hides the whitespace from the parser, line numbers are still
+counted if the unspace contains one or more newlines.  A C<#> following
+such a newline is always an end-of-line comment, as described above.
+Since Pod chunks count as whitespace to the language, they are also
+swallowed up by unspace.  Heredoc boundaries are suppressed, however,
+so you can split excessively long heredoc intro lines like this:
+
+    ok(q:to'CODE', q:to'OUTPUT', \
+    "Here is a long description", \ # --more--
+    todo(:parrøt<0.42>, :dötnet<1.2>));
+	...
+	CODE
+	...
+	OUTPUT
+
+To the heredoc parser that just looks like:
+
+    ok(q:to'CODE', q:to'OUTPUT', "Here is a long description", todo(:parrøt<0.42>, :dötnet<1.2>));
+	...
+	CODE
+	...
+	OUTPUT
 
 =item *
 
